k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo-deployment
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-demo
  template:
    metadata:
      labels:
        app: node-demo
    spec:
      containers:
        - name: node-demo
          image: srikanthawsos/node-docker-demo:latest   # <--- update here
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent   # Good for local testing
