k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-demo-service
  namespace: demo-app
spec:
  selector:
    app: node-demo
  ports:
    - port: 80
      targetPort: 3000
